# whisper_gui

./: .env.example  README.md  pyproject.toml  setup_mac.sh
app/backend/: pipeline.py  server.py  tasks.py
app/core/: pipeline.py
app/services/: youtube.py
app/utils/: env.py
frontend/: .eslintrc.cjs  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/hooks/: useJobPoller.ts
frontend/src/i18n/: translations.ts
frontend/src/providers/: I18nProvider.tsx  ThemeProvider.tsx
frontend/src/styles/: app.css  theme.css
