[project]
name = "whisper-gui"
version = "0.1.0"
description = "GUI and API utilities for Whisper-based transcription workflows"
readme = "README.md"
authors = [{ name = "Whisper GUI Maintainers" }]
requires-python = ">=3.11"
dependencies = [
    "whisperx",
    "torch",
    "torchaudio",
    "pyannote.audio",
    "yt-dlp",
    "ffmpeg-python",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-multipart",
    "aiofiles",
    "sqlalchemy",
    "tinydb",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
